--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -175,9 +175,9 @@
           <nav aria-label="PG Admission.html">
             <ul class="pagination justify-content-end " >
               <li class="page-item">
-                <a  href="PG Admission.html" class="page-link">Previous</a>
+                <a  href="index.html" class="page-link">Previous</a>
               </li>
-              <li class="page-item "><a class="page-link" href="PG Admission.html">1</a></li>
+              <li class="page-item "><a class="page-link" href="index.html">1</a></li>
               
               <li class="page-item active"><a class="page-link" href="PG Admission 2.html">2</a></li>
               <li class="page-item disabled">
