--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <li class="page-item disabled">
             <span class="page-link">Previous</span>
           </li>
-          <li class="page-item active"><a class="page-link" href="PG Admission.html">1</a></li>
+          <li class="page-item active"><a class="page-link" href="index.html">1</a></li>
           
           <li class="page-item"><a class="page-link" href="PG Admission 2.html">2</a></li>
           <li class="page-item">
