--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   
   <div class="container">
-    <div class=" bg-dark text-center my-1"><h1 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""></h1><p class="text-warning">This data is provided from their  website</p>
+    <div class=" bg-dark text-center my-1"><h1 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 01.09.2021  Time-11:46 p.m.
+
+    </p>
       </div>
     
     
