--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -178,7 +178,7 @@
               <li class="page-item">
                 <a  href="index.html.html" class="page-link">Previous</a>
               </li>
-              <li class="page-item "><a class="page-link" href="index.html.html">1</a></li>
+              <li class="page-item "><a class="page-link" href="index.html">1</a></li>
               
               <li class="page-item active"><a class="page-link" href="PG Admission 2.html">2</a></li>
               <li class="page-item disabled">
