--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <div class="container">
-    <div class=" bg-dark text-center my-1"><h1 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 01.09.2021  Time-11:46 p.m.
+    <div class=" bg-dark text-center my-1"><h1 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 02.09.2021  Time-08:46 a.m.
 
     </p>
       </div>
@@ -186,6 +186,7 @@
           <li class="page-item active"><a class="page-link" href="index.html">1</a></li>
           
           <li class="page-item"><a class="page-link" href="PG Admission 2.html">2</a></li>
+          <li class="page-item "><a class="page-link" href="PG Admission 3.html">3</a></li>
           <li class="page-item">
             <a class="page-link" href="PG Admission 2.html">Next</a>
           </li>
