--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class=" bg-dark text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   2 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 01.09.2021  Time-11:46 p.m.
+        <div class=" bg-dark text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   2 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 02.09.2021  Time-08:46 a.m.
 
         </p>
           </div>
@@ -173,16 +173,18 @@
             </tbody>
           </table>
           </div>
-          <nav aria-label="PG Admission.html">
+         <nav aria-label="PG Admission.html">
             <ul class="pagination justify-content-end " >
               <li class="page-item">
-                <a  href="index.html.html" class="page-link">Previous</a>
+                <a  href="index.html" class="page-link">Previous</a>
               </li>
               <li class="page-item "><a class="page-link" href="index.html">1</a></li>
               
               <li class="page-item active"><a class="page-link" href="PG Admission 2.html">2</a></li>
+              <li class="page-item "><a class="page-link" href="PG Admission 3.html">3</a></li>
+                <li class="page-item disabled">
               <li class="page-item disabled">
-                <span class="page-link ">Next</span>
+                <a class="page-link" href="PG Admission 3.html">Next</a>
               </li>
             </ul>
           </nav>
