--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -182,8 +182,8 @@
               
               <li class="page-item active"><a class="page-link" href="PG Admission 2.html">2</a></li>
               <li class="page-item "><a class="page-link" href="PG Admission 3.html">3</a></li>
-                <li class="page-item disabled">
-              <li class="page-item disabled">
+                
+              <li class="page-item">
                 <a class="page-link" href="PG Admission 3.html">Next</a>
               </li>
             </ul>
