--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   
   <div class="container">
     <div class=" bg-dark text-center my-1"><h1 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 02.09.2021  Time-08:46 a.m.
-
-    </p>
+</p>
       </div>
+      <marquee behavior="scroll" direction="left" style="color: red;"><span class="badge bg-primary">New</span><b>
+            Welcome to MathHub - A Online Learning Platform. This is our new portal for M.Sc. Admission related updates.</b> </marquee>
     
     
     <div class="container "> 
