--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -13,6 +13,8 @@
 
         </p>
           </div>
+        <marquee behavior="scroll" direction="left" style="color: red;"><span class="badge bg-primary">New</span><b>
+            Welcome to MathHub - A Online Learning Platform. This is our new portal for M.Sc. Admission related updates.</b> </marquee>
         
         
         <div class="container "> 
