Update PG Admission 2.html

--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container bg-dark">
     <!-- nav start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-1">
       <div class="container-fluid">
@@ -82,7 +82,7 @@
     </nav>
     <!-- nav ends -->
     
-        <div class=" bg-dark text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   2 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 02.09.2021  Time-08:46 a.m.
+        <div class=" bg-dark border text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   2 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 02.09.2021  Time-08:46 a.m.
 </p>
           </div>
         <marquee behavior="scroll" direction="left" style="color: red;"><span class="badge bg-primary">New</span><b>
@@ -267,7 +267,7 @@
             <div class="row">
                 <div class="col-sm">
                   
-                    <p class="text-center text-info">
+                    <p class="text-center border text-info">
                         &copy; 2021 MathHub - All rights reserved <br> Developed by Sagar Nandy
                         </p>
                       </div>
