--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <!-- nav ends -->
   
   
-    <div class=" bg-dark text-center my-1"><h1 class="text-info border  rounded-3 border-light"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 01.09.2021  Time-11:46 p.m. </p>
+    <div class=" bg-dark text-center my-1"><h1 class="text-info border  rounded-3 border-light"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 10.09.2021  Time-11:00 p.m. </p>
       </div> 
       
       <marquee behavior="scroll" direction="left" style="color: red;"><img src="newicon.gif" alt=""> <a class="text-warning" href="https://wbscc.wb.gov.in/"> <b> Apply for Student Credit Card.</b></a> <span class="badge bg-primary">New</span><b>
@@ -243,9 +243,23 @@
                 <li> FOR NON – C.U. CANDIDATES  <a  class="btn btn-outline-primary" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/Section%2014-%20For%20NON-CU%20Candidates.pdf" target="_blank">Click here</a>
 
                 </li>
-                <li> Admission Portal <a  class="btn btn-outline-success" href="http://www.caluniv-ucsta.net/" target="_blank">Click here</a>
+                <li> Application Portal <a  class="btn btn-outline-success" href="http://www.caluniv-ucsta.net/" target="_blank">Click here</a>
 
                 </li>
+                <li> Registration Portal 
+                    <a  class="btn btn-outline-danger" href="http://admission.caluniv-ucsta.net/registration/login" target="_blank">Click here</a>
+                    </li>
+
+                </li>
+                <li>Calculation Sheet   
+                  <a  class="btn btn-outline-warning" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/Calculation%20Sheet%20%20format%20for%20approval%20PG%202021%202022%20.pdf" target="_blank">Click here</a>
+                  </li>
+                  <li> SCIENCE COURSE(Course wise Details of Eligibility for Application, Courses of Study, Eligibility Criteria and No. of Seats)  <a  class="btn btn-outline-primary" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/Section%204-%20Eligibility%20for%20Courses%20Under%20Faculty%20of%20SCIENCE.pdf" target="_blank">Click here</a>
+
+                  </li>
+                  <li>Fees Structure   
+                    <a  class="btn btn-outline-info" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/Section%2012-%20FEES%20STRUCTURE.pdf" target="_blank">Click here</a>
+                    </li>
             </td>
           </tr>
          
