Update PG Admission 2.html

--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -82,7 +82,7 @@
     </nav>
     <!-- nav ends -->
     
-        <div class=" bg-dark border text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   2 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 02.09.2021  Time-08:46 a.m.
+        <div class=" bg-dark border text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   2 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 10.09.2021  Time-10:46 p.m.
 </p>
           </div>
         <marquee behavior="scroll" direction="left" style="color: red;"><span class="badge bg-primary">New</span><b>
@@ -176,8 +176,8 @@
                     <a  class="btn btn-outline-primary" href="https://www.buruniv.ac.in/Notices/FCA_20210687_NOT_WEBPAGE.pdf" target="_blank">Click here</a>
                     </li>
                     
-                    <li> Admission Link  
-                    <a  class="btn btn-outline-danger" href="https://cdn.digialm.com/EForms/configuredHtml/1254/69799/Registration.html" target="_blank">Click here</a>
+                    <li> Application Link  
+                    <a  class="btn btn-outline-danger" href="https://pgadmission.buruniv.ac.in/" target="_blank">Click here</a>
                     </li>
                 </td>
               </tr>
