--- a/index.html
+++ b/index.html
@@ -198,9 +198,15 @@
           <td><li>Notification 
               <a  class="btn btn-outline-primary" href="202108298807.pdf" target="_blank">Click here</a>
               </li>
-              <li> Admission Link  
-              <a  class="btn btn-outline-danger" href="http://onlineadmission.vidyasagar.ac.in" target="_blank">Click here</a>
+              <li> Application Link  
+              <a  class="btn btn-outline-danger" href="https://oasp1.vidyasagar.ac.in/" target="_blank">Click here</a>
               </li>
+              <li>Guidelines for documents to be uploaded:
+                <a  class="btn btn-outline-warning" href="https://oasp1.vidyasagar.ac.in/Data/StaticDocs/Documents_to_be_uploaded_2021_22.pdf" target="_blank">Click here</a>
+                </li>
+                <li>Instructions for calculation of UG % of Marks:
+                  <a  class="btn btn-outline-info" href="https://oasp1.vidyasagar.ac.in/Data/StaticDocs/conversion_rule_21_22.pdf" target="_blank">Click here</a>
+                  </li>
           </td>
         </tr>
         <tr class="table-bordered  border-light">
