Update PG Admission 2.html

--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -179,6 +179,9 @@
                     <li> Application Link  
                     <a  class="btn btn-outline-danger" href="https://pgadmission.buruniv.ac.in/" target="_blank">Click here</a>
                     </li>
+                    <li> Log in page   
+                      <a  class="btn btn-outline-warning" href="https://cdn.digialm.com/EForms/configuredHtml/1254/68612/login.html" target="_blank">Click here</a>
+                      </li>
                 </td>
               </tr>
               <tr class="table-bordered  border-light">
