--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
                 <li>Calculation Sheet   
                   <a  class="btn btn-outline-warning" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/Calculation%20Sheet%20%20format%20for%20approval%20PG%202021%202022%20.pdf" target="_blank">Click here</a>
                   </li>
+            <li>Calculation Sheet format download (.docx)   
+                    <a  class="btn btn-outline-success" href="Calculation Sheet.docx" target="_blank">Click here</a>
+
+                  </li>
+                  <li>Calculation Sheet format download (.pdf)   
+                    <a  class="btn btn-outline-danger" href="Calculation Sheet.pdf" target="_blank">Click here</a>
+
+                  </li>
                   <li> SCIENCE COURSE(Course wise Details of Eligibility for Application, Courses of Study, Eligibility Criteria and No. of Seats)  <a  class="btn btn-outline-primary" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/Section%204-%20Eligibility%20for%20Courses%20Under%20Faculty%20of%20SCIENCE.pdf" target="_blank">Click here</a>
 
                   </li>
