--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- nav start -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://nandysagar.in">MathHub </a>
+      <a class="navbar-brand" href="https://nandysagar.in"><p class="fs-3 fw-bold fst-italic">Math<span class="text-warning fs-3 fw-bold fst-italic">Hub</span></p> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -85,6 +85,12 @@
   
     <div class=" bg-dark text-center my-1"><h1 class="text-info border  rounded-3 border-light"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 10.09.2021  Time-11:00 p.m. </p>
       </div> 
+      <div class="alert alert-danger alert-dismissible fade show" role="alert"><span class="material-icons">
+       <img src="noti.png" alt="">
+        </span>
+        <strong>NOTICE : -</strong> Calculation Sheet for Calcutta University is available here.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
       
       <marquee behavior="scroll" direction="left" style="color: red;"><img src="newicon.gif" alt=""> <a class="text-warning" href="https://wbscc.wb.gov.in/"> <b> Apply for Student Credit Card.</b></a> <span class="badge bg-primary">New</span><b>
         Welcome to MathHub - A Online Learning Platform. This is our new portal for M.Sc. Admission related updates.</b> </marquee>
