--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container bg-dark">
     <!-- nav start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-1">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="https://nandysagar.in">MathHub </a>
+        <a class="navbar-brand" href="https://nandysagar.in"><p class="fs-3 fw-bold fst-italic">Math<span class="text-warning fs-3 fw-bold fst-italic">Hub</span></p> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
