--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -63,10 +63,11 @@
               <a class=" dropdown-toggle btn btn-outline-warning " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </a>
-              <ul class="dropdown-menu  " aria-labelledby="navbarDropdown">
+              <ul class="dropdown-menu bg-warning " aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item " href="index.html">PG Admission Page-1</a></li>
                 <li><a class="dropdown-item" href="PG Admission 2.html">PG Admission Page-2</a></li>
                 <li><a class="dropdown-item" href="PG Admission 3.html">PG Admission Page-3</a></li>
+                  <li><a class="dropdown-item" href="PG Admission 4.html">PG Admission Page-4</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Nothing is  here</a></li>
               </ul>
@@ -250,7 +251,8 @@
               <li class="page-item "><a class="page-link" href="PG Admission 2.html">2</a></li>
               <li class="page-item disabled">
                 <li class="page-item active"><a class="page-link" href="PG Admission 3.html">3</a></li>
-                <li class="page-item disabled">
+                <li class="page-item "><a class="page-link" href="PG Admission 4.html">4</a></li>
+                <li class="page-item active">
                 <span class="page-link ">Next</span>
               </li>
             </ul>
