Update PG Admission 3.html

--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -252,8 +252,8 @@
               <li class="page-item disabled">
                 <li class="page-item active"><a class="page-link" href="PG Admission 3.html">3</a></li>
                 <li class="page-item "><a class="page-link" href="PG Admission 4.html">4</a></li>
-                <li class="page-item active">
-                <span class="page-link ">Next</span>
+                <li class="page-item">
+                <span class="page-link href="PG Admission 4.html ">Next</span>
               </li>
             </ul>
           </nav>
