Update PG Admission 2.html

--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -67,7 +67,7 @@
                 <li><a class="dropdown-item " href="index.html">PG Admission Page-1</a></li>
                 <li><a class="dropdown-item" href="PG Admission 2.html">PG Admission Page-2</a></li>
                 <li><a class="dropdown-item" href="PG Admission 3.html">PG Admission Page-3</a></li>
-                  <li class="page-item "><a class="page-link" href="PG Admission 4.html">4</a></li>
+                  <li class="page-item "><a class="page-link" href="PG Admission 4.html">PG Admission Page-4</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Nothing is  here</a></li>
               </ul>
