--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <!-- nav ends -->
   
   
-    <div class=" bg-dark text-center my-1"><h1 class="text-info border  rounded-3 border-light"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 10.09.2021  Time-11:00 p.m. </p>
+    <div class=" bg-dark text-center my-1"><h1 class="text-info border  rounded-3 border-light"><img src="star.gif" alt=""> M.Sc. Admission Links <img src="star.gif" alt=""> </h1><p class="text-warning">Last Updated- 14.09.2021  Time-01:00 a.m. </p>
       </div> 
       <div class="alert  alert-success alert-dismissible fade show" role="alert"><span class="material-icons">
        <img src="noti.png" alt="">
