--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body>
+    <script> 
+alert("এখানে দেওয়া সকল তথ্য official site থেকে দেওয়া হয়েছে। নতুন কিছু updates আসলে সেটা অবশ্যই দেওয়া হবে। 
+ বি.দ্র.- প্রত্যেকটা University/College এর website নিজেরা check করে verify করে নিন। 
+কোনোরকম ভুলত্রুটিতে আমরা দায়ী থাকব না");
+alert("Clicking 'ok' you will agree to our terms and conditions ");
+</script>
   <div class="container bg-dark">
   <!-- nav start -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
