--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
     <script> 
-alert("এখানে দেওয়া সকল তথ্য official site থেকে দেওয়া হয়েছে। নতুন কিছু updates আসলে সেটা অবশ্যই দেওয়া হবে। 
- বি.দ্র.- প্রত্যেকটা University/College এর website নিজেরা check করে verify করে নিন। 
-কোনোরকম ভুলত্রুটিতে আমরা দায়ী থাকব না");
-alert("Clicking 'ok' you will agree to our terms and conditions ");
+alert("এখানে দেওয়া সকল তথ্য official site থেকে দেওয়া হয়েছে। নতুন কিছু updates আসলে সেটা অবশ্যই দেওয়া হবে। বি.দ্র.- প্রত্যেকটা University/College এর website নিজেরা check করে verify করে নিন। কোনোরকম ভুলত্রুটিতে আমরা দায়ী থাকব না");
 </script>
   <div class="container bg-dark">
   <!-- nav start -->
