Update PG Admission 3.html

--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -221,6 +221,9 @@
                                         </li>
                                     <li>Application Portal <a  class="btn btn-outline-danger" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/" target="_blank">Click here</a>
                                         </li>
+    <li> <img src="new1.gif" alt=""> Tentative Schedule
+                                            <a  class="btn btn-outline-success" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/doc/lfiles/Tentative_Schedule.pdf" target="_blank">Click here</a>
+                                            </li>
                                         <li> How To Apply 
                                             <a  class="btn btn-outline-primary" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/doc/lfiles/How_to_apply.pdf" target="_blank">Click here</a>
                                             </li>
