--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -144,7 +144,7 @@
     </nav>
     <!-- nav ends -->
     
-        <div class=" bg-dark border text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   3 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 14.09.2021  Time-01:00 a.m.
+        <div class=" bg-dark border text-center my-1"><h2 class="text-info"><img src="star.gif" alt=""> M.Sc. Admission Links   3 <img src="star.gif" alt=""> </h2><p class="text-warning">Last Updated- 18.09.2021  Time-08:00 p.m.
 
         </p>
           </div>
