Update PG Admission 2.html

--- a/PG Admission 2.html
+++ b/PG Admission 2.html
@@ -228,9 +228,12 @@
   
                     <a  class="btn btn-outline-primary" href="https://www.presiuniv.ac.in/web/PG2021.pdf" target="_blank">Click here</a>
                     </li>
-                    <li> Admission Link  
-                    <a  class="btn btn-outline-danger" href="http://14.139.217.92/pgadmission/" target="_blank">Click here</a>
+                    <li><img src="new1.gif" alt=""> PG Admission Updates 2021
+                    <a  class="btn btn-outline-danger" href="https://www.presiuniv.ac.in/web/admission.php" target="_blank">Click here</a>
                     </li>
+                    <li><img src="new1.gif" alt=""> First Provitional Merit List For 20% 
+                      <a  class="btn btn-outline-warning" href="http://14.139.217.88/puadmission/pgopen_index.php" target="_blank">Click here</a>
+                      </li>
                 </td>
               </tr>
               <tr class="table-bordered border-light">
