--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -219,7 +219,11 @@
                                     <td><li>Notification
                                         <a  class="btn btn-outline-warning" href="https://nbu.ac.in/doc/notifications_files/GC/CB/PG_Admission_2021-2022.pdf" target="_blank">Click here</a>
                                         </li>
-                                    <li>Application Portal <a  class="btn btn-outline-danger" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/" target="_blank">Click here</a>
+                  <li><img src="new1.gif" alt=""> Provisional Merit List 80% Mathematics<a  class="btn btn-outline-primary" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/doc/prov/NBU_combine_316.pdf" target="_blank">Click here</a>
+                                        </li>
+                                        <li><img src="new1.gif" alt=""> Provisional Merit List 20% Mathematics<a  class="btn btn-outline-primary" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/doc/provtwo/OTH_combine_316.pdf" target="_blank">Click here</a>
+                                        </li>
+                                    <li><img src="new1.gif" alt=""> PG Admission Updates <a  class="btn btn-outline-danger" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/" target="_blank">Click here</a>
                                         </li>
     <li> <img src="new1.gif" alt=""> Tentative Schedule
                                             <a  class="btn btn-outline-success" href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/doc/lfiles/Tentative_Schedule.pdf" target="_blank">Click here</a>
