--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="info">
             <div class="box">
-                <a href="#" target="_blank">....</a><br>
+                <a href="https://dhwu.wbpgadmission.com/PG/" target="_blank"><img src="new1.gif" alt=""> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG ADMISSION UPDATES</a><br>
             </div>
     </div>
     <div class="info">
