--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <nav>
              
-         <a ><marquee  behavior="right" direction="left"><img src="campaign.png" alt=""> PLEASE CHECK OFFICIAL WEBSITES OF EACH UNIVERSITIES FOR GETTIGNG REGULAR UPDATES.</marquee></a>
+         <a ><marquee  behavior="right" direction="left"><img src="campaign.png" alt="">YOU ARE REQUESTED TO CHECK OUR WEBSITE & UNIVERSITIES OFFICIAL WEBSITE FOR ANY NOTIFICATION OR UPDATION || WE WILL NOT BE RESPONSIBLE FOR MISSING OUT ANY NOTIFICATION OR UPDATION || </marquee></a>
             <!-- <a href="#">MAOLP</a> -->
             <!-- <a href="#">MAOLP</a> -->
             <!-- <a href="#">MAOLP</a> -->
