--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         </script>
     
 </head>
-    <body>
+    <body><script> alert("You are requested to check our website & Universities official website for any notification or updation. We will not be responsible for missing any notification or updation.");
+</script>
        
     <div class="wrapper">
         <div class="sidebar">
