--- a/index.html
+++ b/index.html
@@ -98,25 +98,28 @@
             <!-- <a href="#">MAOLP</a> -->
             <div class="animation start-home"></div>
         </nav>
-            
+            <div class="info">
+            <div class="box">
+                <a href="https://www.presiuniv.ac.in/web/admission.php" target="_blank"><img src="newicon.gif" alt=""> PRESIDENCY UNIVERSITY PG ADMISSION UPDATES</a><br>
+            </div>
         <div class="info">
                 <div class="box">
-                    <a href="https://oasp1.vidyasagar.ac.in/" target="_blank"><img src="new1.gif" alt=""> VIDYASAGAR UNIVERSITY PG ADMISSION UPDATES</a><br>
+                    <a href="https://oasp1.vidyasagar.ac.in/" target="_blank"><img src="newicon.gif" alt=""> VIDYASAGAR UNIVERSITY PG ADMISSION UPDATES</a><br>
                 </div>
         </div>
         <div class="info">
                 <div class="box">
-                    <a href="https://www.bankurauniv.ac.in/Student_Admission.aspx" target="_blank"><img src="new1.gif" alt=""> BANKURA UNIVERSITY PG ADMISSION UPDATES </a><br>
+                    <a href="https://www.bankurauniv.ac.in/Student_Admission.aspx" target="_blank"><img src="newicon.gif" alt=""> BANKURA UNIVERSITY PG ADMISSION UPDATES </a><br>
                 </div>
         </div>
         <div class="info">
             <div class="box">
-                <a href="https://dhwu.wbpgadmission.com/PG/" target="_blank"><img src="new1.gif" alt=""> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG ADMISSION UPDATES</a><br>
+                <a href="https://dhwu.wbpgadmission.com/PG/" target="_blank"><img src="newicon.gif" alt=""> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG ADMISSION UPDATES</a><br>
             </div>
     </div>
     <div class="info">
         <div class="box">
-            <a href="#" target="_blank">....</a><br>
+            <a href="#" target="_blank"><img src="newicon.gif" alt="">....</a><br>
         </div>
 </div>
         
