--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <div class="box">
                 <a href="https://www.presiuniv.ac.in/web/admission.php" target="_blank"><img src="newicon.gif" alt=""> PRESIDENCY UNIVERSITY PG ADMISSION UPDATES</a><br>
             </div>
+            </div>
         <div class="info">
                 <div class="box">
                     <a href="https://oasp1.vidyasagar.ac.in/" target="_blank"><img src="newicon.gif" alt=""> VIDYASAGAR UNIVERSITY PG ADMISSION UPDATES</a><br>
