--- a/index.html
+++ b/index.html
@@ -98,11 +98,31 @@
             <!-- <a href="#">MAOLP</a> -->
             <div class="animation start-home"></div>
         </nav>
+             <div class="info">
+        <div class="box">
+            <a href="#" target="_blank"><img src="new1.gif" alt="">....</a><br>
+        </div>
+</div>
+             <div class="info">
+        <div class="box">
+            <a href="#" target="_blank"><img src="new1.gif" alt="">....</a><br>
+        </div>
+</div>
+             <div class="info">
+        <div class="box">
+            <a href="https://pg.dduniversity.in/meritlist.php" target="_blank"><img src="new1.gif" alt="">DAKSHIN DINAJPUR UNIVERSITY</a><br>
+        </div>
+</div>
             <div class="info">
             <div class="box">
                 <a href="https://www.presiuniv.ac.in/web/admission.php" target="_blank"><img src="newicon.gif" alt=""> PRESIDENCY UNIVERSITY PG ADMISSION UPDATES</a><br>
             </div>
             </div>
+             <div class="info">
+        <div class="box">
+            <a href="#" target="_blank"><img src="new1.gif" alt="">....</a><br>
+        </div>
+</div>
         <div class="info">
                 <div class="box">
                     <a href="https://oasp1.vidyasagar.ac.in/" target="_blank"><img src="newicon.gif" alt=""> VIDYASAGAR UNIVERSITY PG ADMISSION UPDATES</a><br>
