--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </div>
              <div class="info">
         <div class="box">
-            <a href="https://pg.dduniversity.in/meritlist.php" target="_blank"><img src="new1.gif" alt="">DAKSHIN DINAJPUR UNIVERSITY</a><br>
+            <a href="https://pg.dduniversity.in/meritlist.php" target="_blank"><img src="new1.gif" alt="">DAKSHIN DINAJPUR UNIVERSITY PG ADMISSION UPDATES</a><br>
         </div>
 </div>
             <div class="info">
