--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -125,7 +125,7 @@
                 Contents
               </a>
               <ul class="dropdown-menu bg-warning " aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item " href="index.html">PG Admission Page-1</a></li>
+                <li><a class="dropdown-item " href="PG Admission.html">PG Admission Page-1</a></li>
                 <li><a class="dropdown-item" href="PG Admission 2.html">PG Admission Page-2</a></li>
                 <li><a class="dropdown-item" href="PG Admission 3.html">PG Admission Page-3</a></li>
                   <li><a class="dropdown-item" href="PG Admission 4.html">PG Admission Page-4</a></li>
