--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -344,14 +344,14 @@
               <li class="page-item">
                 <a  href="PG Admission 2.html" class="page-link">Previous</a>
               </li>
-              <li class="page-item "><a class="page-link" href="index.html">1</a></li>
+              <li class="page-item "><a class="page-link" href="PG Admission.html">1</a></li>
               
               <li class="page-item "><a class="page-link" href="PG Admission 2.html">2</a></li>
               <li class="page-item disabled">
                 <li class="page-item active"><a class="page-link" href="PG Admission 3.html">3</a></li>
                 <li class="page-item "><a class="page-link" href="PG Admission 4.html">4</a></li>
                 <li class="page-item">
-                <span class="page-link href="PG Admission 4.html ">Next</span>
+                <span class="page-link " href="PG Admission 4.html ">Next</span>
               </li>
             </ul>
           </nav>
