--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
             <!-- <a href="#">MAOLP</a> -->
             <!-- <a href="#">MAOLP</a> -->
             <div class="animation start-home"></div>
-        </nav>
+        </nav> <div class="info">
+            <div class="box">
+                <a href="https://www.dhwu.ac.in/meritList.php" target="_blank"><img src="news.gif" alt=""> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG MERIT LIST</a><br>
+            </div>
+            </div>
              <div class="info">
         <div class="box">
             <a href="#" target="_blank"><img src="new1.gif" alt="">....</a><br>
