--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             </div>
              <div class="info">
         <div class="box">
-            <a href="#" target="_blank"><img src="new1.gif" alt="">....</a><br>
+            <a href="https://wbsuadmission.com/subjectWiseCombList.php" target="_blank"><img src="news.gif" alt="">WEST BENGAL STATE UNIVERSITY PG MERIT LIST</a><br>
+             <a href="https://wbsuadmission.com/meritListPdf/MathematicsOther.pdf" target="_blank"><img src="new1.gif" alt="">WEST BENGAL STATE UNIVERSITY PG MERIT LIST FOR MATHEMATICS (OTHER)</a><br>
         </div>
 </div>
              <div class="info">
