--- a/index.html
+++ b/index.html
@@ -110,8 +110,11 @@
 </div>
              <div class="info">
         <div class="box">
-            <a href="#" target="_blank"><img src="new1.gif" alt="">....</a><br>
-        </div>
+           
+            <a href="https://murshidabaduniversity.ac.in/admission/FMerit.aspx" target="_blank"><img src="new1.gif" alt="">MURSHIDABADH UNIVERSITY FINAL MERIT LIST FOR PG 2021-2022</a><br>
+        <a href="https://murshidabaduniversity.ac.in/admission/PMerit.aspx" target="_blank"><img src="new1.gif" alt="">MURSHIDABADH UNIVERSITY PROVISIONAL MERIT LIST FOR PG 2021-2022</a><br>
+                 </div>
+                 
 </div>
              <div class="info">
         <div class="box">
