--- a/index.html
+++ b/index.html
@@ -97,7 +97,14 @@
             <!-- <a href="#">MAOLP</a> -->
             <!-- <a href="#">MAOLP</a> -->
             <div class="animation start-home"></div>
-        </nav> <div class="info">
+        </nav> 
+             <div class="info">
+            <div class="box">
+                <a href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank"><img src="news.gif" alt=""> CALCUTTA  UNIVERSITY PG PROVISIONAL DRAFT MERIT LIST LINK</a><br>
+             <a href="Calcutta University GR_206_UR" target="_blank"><img src="new1.gif" alt=""> CALCUTTA UNIVERSITY PG  PROVISIONAL DRAFT MERIT LIST FOR MATH (206) PART-B</a><br>
+                 </div>
+            </div>
+            <div class="info">
             <div class="box">
                 <a href="https://www.dhwu.ac.in/meritList.php" target="_blank"><img src="news.gif" alt=""> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG MERIT LIST</a><br>
             </div>
