--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
              <div class="info">
             <div class="box">
                 <a href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank"><img src="news.gif" alt=""> CALCUTTA  UNIVERSITY PG PROVISIONAL DRAFT MERIT LIST LINK</a><br>
-             <a href="Calcutta University GR_206_UR" target="_blank"><img src="new1.gif" alt=""> CALCUTTA UNIVERSITY PG  PROVISIONAL DRAFT MERIT LIST FOR MATH (206) PART-B</a><br>
+             <a href="http://www.caluniv-ucsta.net/msc-btech/merit-list/b/GR_206_UR.pdf" target="_blank"><img src="new1.gif" alt=""> CALCUTTA UNIVERSITY PG  PROVISIONAL DRAFT MERIT LIST FOR MATH (206) PART-B</a><br>
                  </div>
             </div>
             <div class="info">
