--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         </div>
 </div>
              <div class="info">
-        <div class="box">
-           
-            <a href="https://murshidabaduniversity.ac.in/admission/FMerit.aspx" target="_blank"><img src="new1.gif" alt="">MURSHIDABADH UNIVERSITY FINAL MERIT LIST FOR PG 2021-2022</a><br>
-        <a href="https://murshidabaduniversity.ac.in/admission/PMerit.aspx" target="_blank"><img src="new1.gif" alt="">MURSHIDABADH UNIVERSITY PROVISIONAL MERIT LIST FOR PG 2021-2022</a><br>
+        <div class="box"> MURSHIDABADH UNIVERSITY
+            <a style="color:red;" href="https://murshidabaduniversity.ac.in/admission/PG%201ST%20RND/MATHEMATICS/G.pdf" target="_blank"><img src="news.gif" alt="">1st Round Admission</a><br>
+            <a href="https://murshidabaduniversity.ac.in/admission/index.aspx" target="_blank"><img src="new1.gif" alt=""> 🔔 MURSHIDABADH UNIVERSITY  PG UPDATES 2021-2022</a><br>
+        /*<a href="https://murshidabaduniversity.ac.in/admission/PMerit.aspx" target="_blank"><img src="new1.gif" alt="">MURSHIDABADH UNIVERSITY PROVISIONAL MERIT LIST FOR PG 2021-2022</a><br>*/
                  </div>
                  
 </div>
