--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         
                  </div>
                  
-</div>
+</div>  
+            <div class="info">
             <div class="box">
             <a href="https://onlineformdata.net/nbu_admission/pg/nbu_pg/" target="_blank"><img src="new1.gif" alt="">University of North Bengal 1st Provisional Merit List for 80%</a><br>
         </div>
