Update PG Admission 3.html

--- a/PG Admission 3.html
+++ b/PG Admission 3.html
@@ -180,7 +180,7 @@
                     </li>
                 <li>Admission Portal <a  class="btn btn-outline-danger" href="https://pg.skbu.ac.in/" target="_blank">Click here</a>
                     </li>
-                   
+                  <li><img src="new1.gif" alt=""> Online PG Admission & Merit List 2021-2022 <a  class="btn btn-outline-success" href="https://pg.skbu.ac.in/admission" target="_blank">Click here</a>
                 </td>
               </tr>
               <tr class="table-bordered  border-light">
