--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
             <div class="animation start-home"></div>
         </nav> 
              <div class="info">
+            <div class="box">
+                 <a  style="color: green;" href="https://e-campusmanagement.com/dhwupg/admissionList/MathematicsOther.pdf" target="_blank"> <img src="news.gif" alt=""> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG FIRST ADMISSION MERIT LIST FOR MATHEMATICS</a><br>
+                 <a href="https://e-campusmanagement.com/dhwupg/admissionList.php" target="_blank"><img src="new1.gif" alt=""> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG First Admission Merit List</a><br>
+                <a  style="color: red;" href="https://www.dhwu.ac.in/meritList.php" target="_blank"> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG MERIT LIST</a><br>
+            </div>
+            </div>
+             <div class="info">
                 <div class="box">
                      <a href="https://oasp1.vidyasagar.ac.in/View/Lists2021/FML.aspx" target="_blank"><img src="news.gif" alt=""> VIDYASAGAR UNIVERSITY PG ADMISSION Revised Provisional Merit List</a><br>
                     <a style="color: red;" href="https://oasp1.vidyasagar.ac.in/" target="_blank">🔔 VIDYASAGAR UNIVERSITY PG ADMISSION UPDATES</a><br>
@@ -133,11 +140,7 @@
              <a href="http://www.caluniv-ucsta.net/msc-btech/merit-list/b/GR_206_UR.pdf" target="_blank"> CALCUTTA UNIVERSITY PG  PROVISIONAL DRAFT MERIT LIST FOR MATH (206) PART-B</a><br>
                  </div>
             </div>
-            <div class="info">
-            <div class="box">
-                <a href="https://www.dhwu.ac.in/meritList.php" target="_blank"> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG MERIT LIST</a><br>
-            </div>
-            </div>
+           
             <div class="info">
                 <div class="box">
                     
