--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                 <a  style="color: red;" href="https://www.dhwu.ac.in/meritList.php" target="_blank"> DIAMOND HARBOUR WOMEN'S UNIVERSITY PG MERIT LIST</a><br>
             </div>
             </div>
+            <div class="info">
+        <div class="box">
+            <a href="http://www.onlineformdata.net/apdu_admission/pg/apdu_pg/doc/prov/COMBINE_316.pdf" target="_blank"><img src="new1.gif" alt=""><img src="news.gif" alt=""> Alipurduar University Provisional Merit List</a><br>
+        </div>
+</div>
              <div class="info">
                 <div class="box">
                      <a href="https://oasp1.vidyasagar.ac.in/View/Lists2021/FML.aspx" target="_blank"><img src="news.gif" alt=""> VIDYASAGAR UNIVERSITY PG ADMISSION Revised Provisional Merit List</a><br>
