--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="info">
         <div class="box">
-            <a href="http://www.onlineformdata.net/apdu_admission/pg/apdu_pg/doc/prov/COMBINE_316.pdf" target="_blank"><img src="new1.gif" alt=""><img src="news.gif" alt=""> Alipurduar University Provisional Merit List</a><br>
+            <a href="http://www.onlineformdata.net/apdu_admission/pg/apdu_pg/doc/prov/COMBINE_316.pdf" target="_blank"><img src="new1.gif" alt=""> Alipurduar University Provisional Merit List</a><br>
         </div>
 </div>
              <div class="info">
