--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
             <!-- <a href="#">MAOLP</a> -->
             <div class="animation start-home"></div>
         </nav> 
+              <div class="info">
+            <div class="box">
+                <a style="color: red;" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/notice.pdf" target="_blank"><img src="new1.gif" alt="">  Important Notice For Part-B [C.U.]</a><br>
+                <a href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank">CALCUTTA  UNIVERSITY PG PROVISIONAL DRAFT MERIT LIST LINK</a><br>
+             <a href="http://www.caluniv-ucsta.net/msc-btech/merit-list/b/GR_206_UR.pdf" target="_blank"> CALCUTTA UNIVERSITY PG  PROVISIONAL DRAFT MERIT LIST FOR MATH (206) PART-B</a><br>
+                 </div>
+            </div>
              <div class="info">
                 <div class="box">
                      
