--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
             <div class="animation start-home"></div>
         </nav> 
              <div class="info">
-                <div class="box">
-                    
-                    
+        <div class="box">
+            <a href="https://www.buruniv.ac.in/Notices/FCS_20210768_NOT_WEBPAGE.pdf" target="_blank"><img src="new1.gif" alt=""><img src="new1.gif" alt=""> Burdwan University Provisional Merit List For Science </a><br>
+        </div>
+</div>
+             <div class="info">
+                <div class="box"> 
                     <a style="color:green;" href="https://bkupg.eazyclasses.com/bkuoas/static/meritlist/1st/M.Sc/MATHEMATICS/Group-B/1st_MATHEMATICS_GENERALMeritList.pdf" target="_blank"><img src="news.gif" alt=""> BANKURA UNIVERSITY PG First Admission List G-B Mathematics</a><br>
                     <a  href="https://bkupg.eazyclasses.com/bkuoas/authentication/show_1st_admissionlist_GroupB" target="_blank"><img src="news.gif" alt=""> BANKURA UNIVERSITY PG First ADMISSION For Group-B</a><br>
                     <a  style="color: rgb(24, 116, 6);" href="https://bkupg.eazyclasses.com/bkuoas/authentication/provisionalmeritlistAction" target="_blank">BANKURA UNIVERSITY PG PROVISIONAL MERIT LIST GROUP-A</a><br>
