--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </nav> 
              <div class="info">
         <div class="box">
-            <a href="https://www.buruniv.ac.in/Notices/FCS_20210768_NOT_WEBPAGE.pdf" target="_blank"><img src="new1.gif" alt=""><img src="new1.gif" alt=""> Burdwan University Provisional Merit List For Science </a><br>
+            <a href="https://www.buruniv.ac.in/Notices/FCS_20210768_NOT_WEBPAGE.pdf" target="_blank"><img src="new1.gif" alt=""> Burdwan University Provisional Merit List For Science </a><br>
         </div>
 </div>
              <div class="info">
