--- a/PG Admission 4.html
+++ b/PG Admission 4.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PG Admission-4 Links</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-<script type="text/javascript">
+<link rel="stylesheet" href="main.css">
+    <script type="text/javascript">
   
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
