--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
         </nav> 
              <div class="info">
         <div class="box">
+            <a href="https://admission.klyuniv.ac.in/Home/Merit" target="_blank"><img src="new1.gif" alt=""> <img src="new1.gif" alt=""> University of Kalyani First Merit List For 80%</a><br>
+        <a href="https://admission.klyuniv.ac.in/MeritList/Pg/ProvisionalMeritListofMScinMathematicsCombines.pdf" target="_blank"><img src="new1.gif" alt=""> <img src="new1.gif" alt=""> University of Kalyani First Merit List For 80% For Mathematics</a><br>
+                 </div>
+</div>
+             <div class="info">
+        <div class="box">
             <a href="https://www.buruniv.ac.in/Notices/FCS_20210768_NOT_WEBPAGE.pdf" target="_blank"><img src="new1.gif" alt=""> Burdwan University Provisional Merit List For Science </a><br>
         </div>
 </div>
