--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </nav> 
              <div class="info">
         <div class="box">
-            <a href="https://admission.klyuniv.ac.in/Home/Merit" target="_blank"><img src="new1.gif" alt=""> University of Kalyani First Merit List For 80%</a><br>
-        <a href="https://admission.klyuniv.ac.in/MeritList/Pg/ProvisionalMeritListofMScinMathematicsCombines.pdf" target="_blank"><img src="new1.gif" alt=""> University of Kalyani First Merit List For 80% For Mathematics</a><br>
+            <a href="https://admission.klyuniv.ac.in/Home/Merit" target="_blank"><img src="new1.gif" alt=""> University of Kalyani Provisional Merit List For 80%</a><br>
+        <a href="https://admission.klyuniv.ac.in/MeritList/Pg/ProvisionalMeritListofMScinMathematicsCombines.pdf" target="_blank"><img src="new1.gif" alt=""> University of Kalyani Provisional Merit List For 80% For Mathematics</a><br>
                  </div>
 </div>
             <div class="info">
