--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
         <a href="https://admission.klyuniv.ac.in/MeritList/Pg/ProvisionalMeritListofMScinMathematicsCombines.pdf" target="_blank"><img src="new1.gif" alt=""> University of Kalyani Provisional Merit List For 80% For Mathematics</a><br>
                  </div>
 </div>
+            div class="info">
+            <div class="box">
+                <a style="color: green;" href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank"><img src="new1.gif" alt=""> CALCUTTA  UNIVERSITY PG PROVISIONAL MERIT LIST LINK</a><br>
+                <a style="color: red;" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/notice.pdf" target="_blank">  Important Notice For Part-B [C.U.]</a><br>
+                <a href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank">CALCUTTA  UNIVERSITY PG PROVISIONAL DRAFT MERIT LIST LINK</a><br>
+             <a href="http://www.caluniv-ucsta.net/msc-btech/merit-list/b/GR_206_UR.pdf" target="_blank"> CALCUTTA UNIVERSITY PG  PROVISIONAL DRAFT MERIT LIST FOR MATH (206) PART-B</a><br>
+                 </div>
+            </div>
              <div class="info">
                 <div class="box">
                      
