--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <a href="https://admission.klyuniv.ac.in/MeritList/Pg/ProvisionalMeritListofMScinMathematicsCombines.pdf" target="_blank"><img src="new1.gif" alt=""> University of Kalyani Provisional Merit List For 80% For Mathematics</a><br>
                  </div>
 </div>
-            div class="info">
+            <div class="info">
             <div class="box">
                 <a style="color: green;" href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank"><img src="new1.gif" alt=""> CALCUTTA  UNIVERSITY PG PROVISIONAL MERIT LIST LINK</a><br>
                 <a style="color: red;" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/notice.pdf" target="_blank">  Important Notice For Part-B [C.U.]</a><br>
