--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     
         <div class="main_contant">
             <div class="header"> MathHub - A Online Learning Platform  <br>
-                <img src="new1.gif" alt="">  Provisional & Merit List Portal For PG Admission 2021-2022
+                Provisional & Merit List Portal For PG Admission 2021-2022
             </div>
             <nav>
              
