--- a/index.html
+++ b/index.html
@@ -100,10 +100,20 @@
         </nav> 
              <div class="info">
         <div class="box">
-            <a href="https://admission.klyuniv.ac.in/Home/Merit" target="_blank"><img src="new1.gif" alt=""> University of Kalyani Provisional Merit List For 80%</a><br>
-        <a href="https://admission.klyuniv.ac.in/MeritList/Pg/ProvisionalMeritListofMScinMathematicsCombines.pdf" target="_blank"><img src="new1.gif" alt=""> University of Kalyani Provisional Merit List For 80% For Mathematics</a><br>
+             <a  style="color: green;" href="https://admission.klyuniv.ac.in/Home/Merit" target="_blank"><img src="news.gif" alt=""> University of Kalyani PG Admission Updates</a><br>
+             <a style="color: green;" href="https://admission.klyuniv.ac.in/MeritList/Pg/Admission/MeritList_1_MScinMathematics_UR_HomeUniversity.pdf" target="_blank"><img src="news.gif" alt=""> University of Kalyani First Admission List For 80% For Mathematics</a><br>
+            <a href="https://admission.klyuniv.ac.in/Home/Merit" target="_blank"> University of Kalyani Provisional Merit List For 80%</a><br>
+        <a href="https://admission.klyuniv.ac.in/MeritList/Pg/ProvisionalMeritListofMScinMathematicsCombines.pdf" target="_blank"> University of Kalyani Provisional Merit List For 80% For Mathematics</a><br>
                  </div>
 </div>
+             <div class="info">
+                <div class="box">
+                      <a  href="https://oasp1.vidyasagar.ac.in/eAdmission/Report/Default.aspx" target="_blank"><img src="news.gif" alt=""> VIDYASAGAR UNIVERSITY PG  Round 3 Admission List </a><br>
+                    <a style="color: green;" href="https://oasp1.vidyasagar.ac.in/eAdmission/" target="_blank"><img src="news.gif" alt=""> VIDYASAGAR UNIVERSITY PG  Round 2 Admission List </a><br>
+                    
+                    <a style="color: red;" href="https://oasp1.vidyasagar.ac.in/" target="_blank">🔔 VIDYASAGAR UNIVERSITY PG ADMISSION UPDATES</a><br>
+                </div>
+        </div>
             <div class="info">
             <div class="box">
                 <a style="color: green;" href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank"><img src="new1.gif" alt=""> CALCUTTA  UNIVERSITY PG PROVISIONAL MERIT LIST LINK</a><br>
