--- a/index.html
+++ b/index.html
@@ -133,6 +133,21 @@
                  
 </div>  
             <div class="info">
+        <div class="box">
+            <a href="https://ugb.wbpgadmission.com/PG/subjectWiseCombListOther.php" target="_blank"><img src="new1.gif" alt="">University of Gour Banga Subject Wise Combined List Open Category</a><br>
+        </div>
+</div>
+             <div class="info">
+        <div class="box">
+            <a href="https://biswabanglabiswabidyalay.org/merit-list" target="_blank"><img src="new1.gif" alt="">Biswa Bangla Biswabidyalay PG Merit List</a><br>
+        </div>
+</div>
+            <div class="info">
+        <div class="box">
+            <a href="https://www.knu.ac.in/view-details-announcement-pages/1326" target="_blank"><img src="new1.gif" alt="">Kaji Nazrul University PG Merit List </a><br>
+        </div>
+</div>
+            <div class="info">
             <div class="box">
                 <a style="color: green;" href="http://www.caluniv-ucsta.net/msc-btech/draft_merit_list_partb.php" target="_blank"><img src="new1.gif" alt=""> CALCUTTA  UNIVERSITY PG PROVISIONAL MERIT LIST LINK</a><br>
                 <a style="color: red;" href="http://www.caluniv-ucsta.net/msc-btech/notice-2021/notice.pdf" target="_blank">  Important Notice For Part-B [C.U.]</a><br>
