--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
     <body>
          <script>
-            alert("সকলকে জানাই শারদীয়ার প্রীতি ও শুভেচ্ছা ");
+            alert("সবাইকে জানাই শুভ বিজয়ার প্রীতি ও শুভেচ্ছা,গুরুজনদের প্রণাম ।| 🙏 ");
 </script>
         <script>
             alert("You are requested to check our website & Universities official website for any notification or updation. We will not be responsible for missing any notification or updation.");
@@ -97,7 +97,7 @@
             </div>
             <nav>
              
-         <a ><marquee  behavior="right" direction="left"><img src="campaign.png" alt=""> সকলকে জানাই শারদীয়ার প্রীতি ও শুভেচ্ছা || YOU ARE REQUESTED TO CHECK OUR WEBSITE & UNIVERSITIES OFFICIAL WEBSITE FOR ANY NOTIFICATION OR UPDATION || WE WILL NOT BE RESPONSIBLE FOR MISSING OUT ANY NOTIFICATION OR UPDATION || </marquee></a>
+         <a ><marquee  behavior="right" direction="left"><img src="campaign.png" alt=""> সবাইকে জানাই শুভ বিজয়ার প্রীতি ও শুভেচ্ছা,গুরুজনদের প্রণাম ।| 🙏  || YOU ARE REQUESTED TO CHECK OUR WEBSITE & UNIVERSITIES OFFICIAL WEBSITE FOR ANY NOTIFICATION OR UPDATION || WE WILL NOT BE RESPONSIBLE FOR MISSING OUT ANY NOTIFICATION OR UPDATION || </marquee></a>
             <!-- <a href="#">MAOLP</a> -->
             <!-- <a href="#">MAOLP</a> -->
             <!-- <a href="#">MAOLP</a> -->
