--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr"><head>
     <meta charset="utf-8">
-    <meta  http-equiv="refresh" content="0; URL='https://pgupdates.nandysagar.in/closed.html ' "       />
+    <!--<meta  http-equiv="refresh" content="0; URL='https://pgupdates.nandysagar.in/closed.html ' "       />-->
     <title>Mathub Merit Lists Portal</title>
     <link rel="stylesheet" href="Final Site.css">
     <style>
