--- a/e575dccc71140754dd85beda5965b6a358150309/index.html
+++ b/e575dccc71140754dd85beda5965b6a358150309/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://nandysagar.in/CSS/main.css">
+  <link rel="stylesheet" href="https://nandysagar.in/combined/CSS/main.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -188,7 +188,7 @@ $('body').bind('copy paste',function(e) {
 
       </marquee>
     </div>
-  </div>.in
+  </div>
 
 
   <div class="container" style="margin-top: 15px;">
@@ -882,7 +882,7 @@ $('body').bind('copy paste',function(e) {
     </div>
 
   </div>
-  <script type="text/javascript" src="https://nandysagar.in/CSS/govtjobsupdate.js"></script>
+  <script type="text/javascript" src="https://nandysagar.in/combined/CSS/govtjobsupdate.js"></script>
   <script>
 
     $(window).on('load', function () {
